Adding tests and refactoring.